[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/SaveMenu.gd" type="Script" id=1]
[ext_resource path="res://Art Assets/Menus/Save Menu/Backgrounds/Pink Checker Scroll/Spritesheets/Candy_Background_Upscale.png" type="Texture" id=2]
[ext_resource path="res://Fonts/PixelifySans-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Art Assets/Menus/Title Screen/Backgrounds/Large Black Spikey Label/Title_Screen_Label_Upscale.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Scroll"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "BlackLabel"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="DynamicFont" id=2]
size = 25
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 25
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[node name="SaveMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="PinkCheckerBG" type="Sprite" parent="Node2D"]
position = Vector2( 0, -39 )
scale = Vector2( 0.854, 0.854 )
texture = ExtResource( 2 )
centered = false
vframes = 4

[node name="PinkCheckerBGAnim" type="AnimationPlayer" parent="Node2D/PinkCheckerBG"]
autoplay = "Scroll"
anims/Scroll = SubResource( 1 )

[node name="LeftBlackLabel" type="Sprite" parent="Node2D"]
position = Vector2( -106, -77 )
texture = ExtResource( 4 )
centered = false
vframes = 4
frame = 1

[node name="LeftBlackLabelAnim" type="AnimationPlayer" parent="Node2D/LeftBlackLabel"]
autoplay = "BlackLabel"
anims/BlackLabel = SubResource( 3 )

[node name="SaveToTitle" type="Button" parent="."]
margin_left = 19.0
margin_top = 532.0
margin_right = 222.0
margin_bottom = 580.0
custom_fonts/font = SubResource( 2 )
text = "Back to Title"
flat = true

[node name="NewGame1" type="Button" parent="."]
margin_left = 384.0
margin_top = 139.0
margin_right = 759.0
margin_bottom = 245.0
custom_fonts/font = SubResource( 4 )
text = "New Game"
flat = true
icon_align = 1

[node name="NewGame2" type="Button" parent="."]
margin_left = 383.0
margin_top = 277.0
margin_right = 758.0
margin_bottom = 383.0
custom_fonts/font = SubResource( 4 )
text = "New Game"
flat = true
icon_align = 1

[node name="NewGame3" type="Button" parent="."]
margin_left = 384.0
margin_top = 425.0
margin_right = 759.0
margin_bottom = 531.0
custom_fonts/font = SubResource( 4 )
text = "New Game"
flat = true
icon_align = 1

[node name="SaveToTitle2" type="Button" parent="."]
margin_left = 811.0
margin_top = 529.0
margin_right = 1014.0
margin_bottom = 577.0
custom_fonts/font = SubResource( 2 )
text = "Delete Save"
flat = true

[connection signal="pressed" from="SaveToTitle" to="." method="_on_SaveToTitle_pressed"]
[connection signal="pressed" from="NewGame1" to="." method="_on_NewGame1_pressed"]
[connection signal="pressed" from="NewGame2" to="." method="_on_NewGame2_pressed"]
[connection signal="pressed" from="NewGame3" to="." method="_on_NewGame3_pressed"]
[connection signal="pressed" from="SaveToTitle2" to="." method="_on_SaveToTitle_pressed"]
