extends Control

func _on_SaveToTitle_pressed():
	get_tree().change_scene("res://Scenes/Menu Scenes/TitleScreen.tscn")
	pass # Replace with function body.
	
func _on_NewGame1_pressed():
	get_tree().change_scene("res://Scenes/Menu Scenes/CharacterSelect.tscn")
	pass # Replace with function body.
	
func _on_NewGame2_pressed():
	get_tree().change_scene("res://Scenes/Menu Scenes/CharacterSelect.tscn")
	pass # Replace with function body.
	
func _on_NewGame3_pressed():
	get_tree().change_scene("res://Scenes/Menu Scenes/CharacterSelect.tscn")
	pass # Replace with function body.
